changed info window, now is by click

--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ a {
     text-decoration: none;
 }
 
-.country_score {
+.country_info_window {
   display: none;
   position: absolute;
   z-index: 1000;
