--- a/css/style.css
+++ b/css/style.css
@@ -353,15 +353,19 @@ h1 {
   height: 300px;
   width: 100%;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .donations, .budget{
   width: 200px;
+  height: 100px;
   margin: 0 auto;
   margin-bottom: 40px;
+  float: left;
+  margin: 0 auto;
 }
 
-.title_donation{
+.label_donation{
   float: left;
   color: #ddd;
   margin: 0px 40px 0px 0px;
